crates/pg_syntax/tests/snapshots/postgres_regress/lseg@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO LSEG_TBL VALUES ('(0,0),(6,6)');"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "LSEG_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..42
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..42
      AConst@29..42
        Sconst@29..42 "'(0,0),(6,6)'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

