crates/pg_syntax/tests/snapshots/postgres_regress/lseg@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO LSEG_TBL VALUES ('[(-10,2),(-10,3)]');"
---
InsertStmt@0..50
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "LSEG_TBL"
  Whitespace@20..21 " "
  SelectStmt@21..48
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..48
      AConst@29..48
        Sconst@29..48 "'[(-10,2),(-10,3)]'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

