crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '    08:00:2b:01:02:03     '::macaddr8;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    TypeCast@7..45
      AConst@7..35
        Sconst@7..35 "'    08:00:2b:01:02:0 ..."
      Typecast@35..37 "::"
      TypeName@37..45
        Ident@37..45 "macaddr8"
  Ascii59@45..46 ";"

