crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr8_data VALUES (2, '08-00-2b-01-02-03');"
---
InsertStmt@0..58
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "macaddr8_data"
  Whitespace@25..26 " "
  SelectStmt@26..56
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..56
      AConst@34..35
        Iconst@34..35 "2"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..56
        Sconst@37..56 "'08-00-2b-01-02-03'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

